--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,9 @@ dependencies = [
     "isort (>=7.0.0,<8.0.0)",
     "pytest (>=9.0.2,<10.0.0)",
     "langchain-google-genai (>=4.2.0,<5.0.0)",
-    "langchain-text-splitters (>=1.1.0,<2.0.0)"
+    "langchain-text-splitters (>=1.1.0,<2.0.0)",
+    "google-generativeai (>=0.8.6,<0.9.0)",
+    "langchain-groq (>=1.1.1,<2.0.0)"
 ]
 
 
